<resources>
    <string name="app_name">KNG App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_mobile_no">Mobile No</string>
    <string name="change_language">भाषा बदला</string>
    <string name="register_user">Sign Up</string>
    <string name="enter_name">Name</string>
    <string name="enter_village">Village</string>
    <string name="enter_address">Address</string>
    <string name="enter_city">City</string>
    <string name="enter_state">State</string>
    <string name="enter_postal_code">Pincode</string>
    <string name="home">Home</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="user_profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="order_history">Order History</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="add_to_cart_success">Added to cart successfully</string>
    <string name="loading">Loading ...</string>

    <string name="update_cart_success">Cart updated successfully</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="update_cart">Update cart</string>
    <string name="err_mobile_already_exist">Mobile no already registered.</string>
    <string name="amount_payable">Amount Payable : </string>
    <string name="check_out">Checkout</string>
    <string name="feedback_hint">Good or bad. Whatever it is. Please give your feedback.</string>
    <string name="categories_hint">Categories</string>
    <string name="select_quantity_hint">SELECT QUANTITY</string>
    <string name="manufacturer_company_hint">Manufacturer : </string>
    <string name="select_lang">Select</string>
    <string name="verify_mobile_hint">Please wait, We are verifying your mobile number ! \n Mobile number : </string>
    <string name="enter_otp_hint">Enter OTP </string>
    <string name="enter_otp"> Enter OTP</string>
    <string name="go_ahead">Continue</string>
    <string name="search_here">Search here</string>
    <string name="error_no_item_in_cart">There are No Item in cart. Please buy something.</string>

    <string name="error_mobile_no">Please check the mobile no</string>
    <string name="error_name">Please check the name</string>
    <string name="error_village">Please check the village.</string>
    <string name="error_address">Please check the address.</string>
    <string name="error_city">Please check the city.</string>
    <string name="error_state">Please check the state.</string>
    <string name="error_pin_code">Please check the pin code.</string>
    <string name="update_profile_button">Update</string>
    <string name="exit_confirmation">Do you really want to exit ?</string>
    <string name="logout_confirmation">Do you really want to logout ?</string>
    <string name="error_empty_otp">Please enter OTP</string>
    <string name="error_wrong_otp">Please enter right OTP</string>
    <string name="error_no_quantity">Please enter quantity.</string>
    <string name="error_no_internet_conenction">Please check your Internet connection!</string>
    <string name="error_mobile_is_not_registered">Mobile no is not registered!</string>
    <string name="error_general_error">Error occured!</string>
    <string name="billing_address">Billing Address</string>
    <string name="ship_to_diffrent_address">Ship to different address ?</string>
    <string name="go_back">Back</string>
    <string name="delivery_address">Delivery address</string>
    <string name="thanks_for_feedback">Thank you for your precious feedback ..!!</string>
    <string name="product_price">Product price :</string>
    <string name="product_quantity">Quantity :</string>
    <string name="final_price">Total :</string>
    <string name="product_weight">Product weight :</string>
    <string name="feedback_button">Submit</string>
    <string name="rate_us_on_play_store">Rate us on Play Store.</string>
    <string name="shopping_cart_hint">Shopping cart</string>
    <string name="remove_cart_success">Removed from cart successfully.</string>
    <string name="order_placed_successful">Order placed successfully.</string>
</resources>
