<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kng.app.kngapp.Fragment.Fragment_Checkout1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/billing"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:textSize="19sp"
                    android:drawablePadding="15dp"
                    android:hint="@string/billing_address"
                    android:padding="5dp"
                    android:textColorHint="@color/colorPrimaryDark" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FFCCCCCC"/>
               </LinearLayout>

                <TextView
                    android:id="@+id/c1_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="19sp"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_call"
                    android:drawablePadding="15dp"
                    android:hint="@string/enter_mobile_no"
                    android:inputType="phone"
                    android:padding="5dp"
                    android:textColorHint="@color/colorAccent" />

                <TextView
                    android:id="@+id/c1_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="19sp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:hint="@string/enter_name"
                    android:padding="5dp"
                    android:textColorHint="@color/colorAccent" />

                <TextView
                    android:id="@+id/c1_village"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="19sp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:hint="@string/enter_village"
                    android:padding="5dp"
                    android:textColorHint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/c1_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:textSize="19sp"
                        android:gravity="center_vertical"
                        android:drawableLeft="@drawable/ic_address"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_address"
                        android:padding="5dp"
                        android:textColorHint="@color/colorAccent" />


                    <!--<Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:visibility="gone"
                        android:layout_gravity="right"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="5"
                        android:padding="5dp"></Spinner>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:layout_weight="5"
                        android:drawableLeft="@drawable/ic_city"
                        android:drawablePadding="15dp"
                        android:padding="5dp"
                        android:hint="Country"
                        android:textColor="#ff9900"
                        android:textSize="19sp"
                        android:id="@+id/c1_Country" />
-->
                    <TextView
                        android:id="@+id/c1_city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:textSize="19sp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_city"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_city"
                        android:padding="5dp"
                        android:textColorHint="@color/colorAccent" />


                    <TextView
                        android:id="@+id/c1_state"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:layout_marginRight="20dp"
                        android:textSize="19sp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_state"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_state"
                        android:padding="5dp"
                        android:textColorHint="@color/colorAccent" />

                    <TextView
                        android:id="@+id/c1_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center_vertical"
                        android:textSize="19sp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/ic_post"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_postal_code"
                        android:padding="5dp"
                        android:textColorHint="@color/colorAccent" />




            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/c1_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/go_back"
            android:textSize="17sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/c1_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/go_ahead"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>
