<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp.myapplication.Activitis.Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="137dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/login_image2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:drawableLeft="@drawable/ic_call"
                android:background="@drawable/edittext_background"
                android:textColorHint="#ff9900"
                android:drawablePadding="15dp"
                android:hint="@string/enter_mobile_no"
                android:inputType="phone"
                android:padding="5dp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/change_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/change_language"
            android:textColor="#ff9900"
            android:textSize="15sp" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_no_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:text="@string/register_user"
                    android:textColor="#ff9900"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
