<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kng.app.kngapp.Fragment.Fragment_Checkout1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:fillViewport="true">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_register_"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                tools:context="com.kng.app.kngapp.Fragment.Fragment_Profile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/c2_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="5"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/ship_to_diffrent_address"
                    android:textColor="#ff000000"
                    android:textSize="19sp" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/c2_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp">

                        <EditText
                            android:id="@+id/c2_mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:maxLines="1"
                            android:drawableLeft="@drawable/ic_call"
                            android:drawablePadding="15dp"
                            android:hint="@string/enter_mobile_no"
                            android:inputType="phone"
                            android:padding="5dp"
                            android:textColorHint="#ff9900" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp">

                        <EditText
                            android:id="@+id/c2_name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp"
                            android:maxLines="1"
                            android:inputType="textCapWords"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="15dp"
                            android:hint="@string/enter_name"
                            android:padding="5dp"
                            android:textColorHint="#ff9900" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="2dp">

                        <EditText
                            android:id="@+id/c2_village"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="10dp"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="15dp"
                            android:hint="@string/enter_village"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:textColorHint="#ff9900" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/c2_address"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="textCapSentences"
                        android:drawableLeft="@drawable/ic_address"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_address"
                        android:padding="5dp"
                        android:textColorHint="#ff9900" />
                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/c2_city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:drawableLeft="@drawable/ic_city"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_city"
                        android:padding="5dp"
                        android:textColorHint="#ff9900" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/c2_state"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:drawableLeft="@drawable/ic_state"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_state"
                        android:padding="5dp"
                        android:textColorHint="#ff9900" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp">

                    <EditText
                        android:id="@+id/c2_postal_code"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:inputType="number"
                        android:drawableLeft="@drawable/ic_post"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_postal_code"
                        android:padding="5dp"
                        android:textColorHint="#ff9900" />
                </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </LinearLayout>
</LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/c2_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/go_back"
            android:textSize="17sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/c2_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/go_ahead"
            android:textSize="17sp" />
    </LinearLayout>


</LinearLayout>
