<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:id="@+id/helpus_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:layout_weight="17.10">

            <EditText
                android:id="@+id/et_cmp_feedback"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/app_et_input_shape"
                android:gravity="top"
                android:textSize="16dp"
                android:textColorHint="#cccccc"
                android:hint="@string/feedback_hint"
                android:padding="4dp">
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_feedback_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/button_background"
                android:text="@string/feedback_button"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/tv_cmp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rate_us_on_play_store"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:progressTint="@color/colorPrimaryDark"
                android:progressBackgroundTint="#e9e9e9"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"

                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>